@@ -46,6 +46,7 @@
   fix infinite loop in is_stat_get() triggered by network congestion (USC)
   job suspend/resume enhancements (see qsig manpage) (USC)
   support higher file descriptors in TM by using poll() instead of select() (USC)
+  immediate job delete feedback to interactive queued jobs (USC)
 
 2.0.0p7
 
